# 2025-2026

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  config.yaml  controller.py  forward_pulse.py  mypy.ini  notes.md  pyproject.toml  pytest.ini  pyzed-4.2-cp312-cp312-linux_aarch64.whl  pyzed-5.3-cp312-cp312-linux_aarch64.whl  requirements-dev.txt  requirements.txt  ruff.toml  run.py
.github/ISSUE_TEMPLATE/: module_task.yml
.github/workflows/: ci.yml
docs/: GIT_CHEATSHEET.md  camera_package.md  db_manager.md  hardware_interface.md
libs/: config.py  logging_config.py  process_manager.py  quick_request.py  ui.py
libs/ai_package/: ai_interface.py  ai_logic.py  ai_manager.py  common.py  gate_logic.py  slalom_logic.py  straight_line_logic.py
libs/camera_package/: __init__.py  camera_manager.py  camera_utils.py  config_loader.py  emoji_data_generator.py  notes.md  run.py
libs/camera_package/cameras/: usb_camera.py  zed_camera.py
libs/camera_package/model_training/runs/detect/runs/robosub_emoji/train/: args.yaml  results.csv
libs/camera_package/model_training/runs/v2/: args.yaml  results.csv
libs/camera_package/streaming/: server.py
libs/data_visualizer/: README.md  __init__.py  config_loader.py  create_app.py  db_utils.py  routes.py  run.py  run.sh
libs/data_visualizer/routes/: pages.py  partials.py
libs/data_visualizer/statics/: app.js  index.js
libs/data_visualizer/templates/: base.html  index.html
libs/data_visualizer/templates/partials/: depth_rows.html  hydrophone_rows.html  imu_rows.html  inputs_rows.html  outputs_rows.html  power_saftey_rows.html
libs/db_manager/: .gitignore  auv_database.db  database.py  deps.py  models.py  routers.py  run.py  smoke_test.sh
libs/hardware_interface/: config.json  config_loader.py  controller.py  db_connection.py  hardware_interface.py  i2cscanner.py  logic.py  message_handler.py  process_manager.py  requirements.txt  run.py  scanner.py
libs/hardware_interface/arduino/motor_controller/: motor_controller.ino
libs/hardware_interface/boards/: BNO08x.py  BNO08x_Serial.py
libs/hardware_interface/embedded/picoIMU/: picoIMU.ino
libs/hardware_interface/i2c_devices/: BNO08x.py
libs/hardware_interface/modules/: arm_controller.py  esc_controller.py  imu_controller.py  motor_sweep_test.py  motors.py  pre_controller.py
libs/hardware_interface/modules/tests/: motor_sweep_test.py
libs/movement_package/: config_loader.py  logic.py  movement_package.py  pid.py  run.py
libs/sonar_package/: __init__.py  run.py  sonar_utils.py
shared/: mapping.py
tests/: test_sanity.py
tests/ai_package/: test_manager.py
tests/camera_package/: test_camera.py
tests/data_visualizer/: test_config.py
tests/db_manager/: test_models.py
tests/hardware_interface/: test_i2c.py
tests/movement_package/: test_pid.py
tests/sonar_package/: test_layout.py
