[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ksu-auv-2025-2026"
version = "0.1.0"
description = "KSU AUV software (2025-2026)"
requires-python = "~=3.12.0"
dependencies = [
    "aiosqlite==0.21.0",
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "certifi==2025.8.3",
    "click==8.2.1",
    "dnspython==2.8.0",
    "email-validator==2.3.0",
    "exceptiongroup==1.3.0",
    "fastapi==0.116.2",
    "fastapi-cli==0.0.11",
    "fastapi-cloud-cli==0.1.5",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "idna==3.10",
    "Jinja2==3.1.6",
    "markdown-it-py==4.0.0",
    "MarkupSafe==3.0.2",
    "mdurl==0.1.2",
    "numpy",
    "pymupdf>=1.24.0",
    "Pillow>=10.0.0",
    "albumentations>=1.4.0",
    "icrawler>=0.6.6",
    "pydantic==2.11.9",
    "pydantic_core==2.33.2",
    "Pygments==2.19.2",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    "PyYAML==6.0.2",
    "requests==2.34.2",
    "rich==14.2.0",
    "rich-toolkit==0.15.1",
    "rignore==0.6.4",
    "sentry-sdk==2.38.0",
    "shellingham==1.5.4",
    "sniffio==1.3.1",
    "starlette==0.48.0",
    "textual==8.2.5",
    "typing-inspection==0.4.1",
    "typing_extensions==4.15.0",
    "urllib3==2.5.0",
    "uvicorn==0.35.0",
    "uvloop==0.21.0",
    "plotext>=5.2",
    "watchfiles==1.1.0",
    "websockets==15.0.1",
    "smbus2==0.6.1",
    "numpy",
    "opencv-python",
    "ultralytics",
    "pyzed"
]

[project.scripts]
auv = "libs.ui:main"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pre-commit>=3.8",
    "ruff>=0.6.9",
    "black>=24.10.0",
    "isort>=5.13.2",
    "mypy>=1.11.1",
    "types-requests",
]

[tool.uv.sources]
pyzed = { url = "https://download.stereolabs.com/zedsdk/4.2/whl/linux_aarch64/pyzed-4.2-cp312-cp312-linux_aarch64.whl" }

[tool.setuptools]
packages = ["libs", "libs.db_manager", "libs.hardware_interface", "libs.movement_package", "libs.ai_package", "libs.sonar_package", "libs.camera_package"]
package-dir = {"" = "."}

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.coverage.run]
branch = true
source = ["libs"]

[tool.coverage.report]
show_missing = true
